GeditDocument: better externally modified check

https://bugzilla.gnome.org/show_bug.cgi?id=671250